# toxicblend

./: .gitignore  .gitmodules  LICENSE  README.md  build.sbt
project/: build.scala
src/cpp/boost/: CMakeLists.txt  jarr  make_clean  medianaxis.cpp  medianaxis.hpp  org_toxicblend_operations_boostmedianaxis_MedianAxisJni.cpp  org_toxicblend_operations_boostmedianaxis_MedianAxisJni.hpp  pointz_data.hpp  voronoi_visual_utils.hpp  voronoiedges.cpp  voronoiedges.hpp
src/main/blender_addon/: toxicblend_adddragoncurve.py  toxicblend_addparametriccircle.py  toxicblend_applyall.py  toxicblend_boostsimplify.py  toxicblend_debugobj.py  toxicblend_dragoncurve.py  toxicblend_generatemaze.py  toxicblend_generatemesh.py  toxicblend_intersectedges.py  toxicblend_medianaxis.py  toxicblend_metavolume.py  toxicblend_movetozeroz.py  toxicblend_offset2d.py  toxicblend_parametriccircle.py  toxicblend_projectionoutline.py  toxicblend_saveobj.py  toxicblend_selectendvertices.py  toxicblend_selectintersectionvertices.py  toxicblend_simplegcode.py  toxicblend_simplegcodegenerator.py  toxicblend_simplegcodeview.py  toxicblend_simplify.py  toxicblend_subdivideedges.py  toxicblend_toxiclibsvolume.py  toxicblend_zadjust.py
src/main/java/com/badlogic/gdx/utils/: FloatArray.java  GdxRuntimeException.java  IntArray.java  SharedLibraryLoader.java  ShortArray.java
src/main/java/org/toxicblend/protobuf/: ToxicBlendProtos.java
src/main/java/st0le/convexHull/: NaiveConvexHull.java
src/main/resorces/: run-protoc  toxicblend.proto
src/main/scala/org/toxicblend/: Client.scala  CommandProcessorTrait.scala  EchoProcessor.scala  Server.scala  ServerThread.scala  ToxicblendException.scala  ToxicblendServer.scala  UnitSystem.scala
src/main/scala/org/toxicblend/attic/: CyclicTree.scala
src/main/scala/org/toxicblend/geometry/: BoundingBox.scala  BoundingBoxMutable.scala  IntersectionVec3D.scala  IntersectionVec3DImplicit.scala  Interval.scala  Matrix3x3.scala  Matrix4f.scala  Matrix4x4Extension.scala  Matrix4x4Implicit.scala  Mesh2D.scala  ProjectionPlane.scala  QuickLineSegment.scala  RamerDouglasPeuckerAlgorithm.scala  Rings2D.scala  TrianglePlaneIntersection.scala  Vec2DZ.scala
src/main/scala/org/toxicblend/operations/boostmedianaxis/: BoundingBox.scala  BoundingBoxMutable.scala  GCode.scala  GenerateGCode.scala  InteriorEdges.scala  IntersectionVec3D.scala  MedianAxisJni.scala  MedianAxisOperation.scala  MedianAxisProcessor.scala  ObjParser.scala  Ring2D.scala  Vec2DZ.scala
src/main/scala/org/toxicblend/operations/boostsimplify/: BoostSimplify.scala  BoostSimplifyOperation.scala
src/main/scala/org/toxicblend/operations/dragoncurve/: DragonCurveOperation.scala  DragonCurveProcessor.scala
src/main/scala/org/toxicblend/operations/gcodeparse/: GCodeParser.scala  GcodeLines.scala  ParseGcodeOperation.scala
src/main/scala/org/toxicblend/operations/generatemaze/: GenerateMazeOperation.scala  MazeGenerator.scala  StartPoint.scala
src/main/scala/org/toxicblend/operations/intersectedges/: IntersectEdgesOperation.scala
src/main/scala/org/toxicblend/operations/meshgenerator/: CyclicTree.scala  MeshGeneratorOperation.scala  SutherlandHodgemanClipper.scala  SutherlandHodgemanClipper2.scala  ZCalculator.scala
src/main/scala/org/toxicblend/operations/naiveconvexhull/: NaiveConvexHullProcessor.scala
src/main/scala/org/toxicblend/operations/offset2dshape/: Offset2dShapeOperation.scala
src/main/scala/org/toxicblend/operations/parametricmodels/: ParametricCircleOperation.scala
src/main/scala/org/toxicblend/operations/projectionoutline/: FaceFuser.scala  ProjectionOutlineOperation.scala  ProjectionOutlineProcessor.scala
src/main/scala/org/toxicblend/operations/saveobj/: SaveObjOperation.scala
src/main/scala/org/toxicblend/operations/simplegcode/: GCode.scala  GenerateGCode.scala  ObjParser.scala  SimpleGcodeOperation.scala  Vec2DZ.scala
src/main/scala/org/toxicblend/protobuf/: ToxicBlenderProtos.java
src/main/scala/org/toxicblend/tests/: RingParser.scala  Rings3DTest.scala  Test.scala  Test1.scala  Test2.scala  Test5.scala  VertexToFaceMapTest.scala
src/main/scala/org/toxicblend/typeconverters/: ByteBufferMeshConverter.scala  GCodeConverter.scala  LineStripConverter.scala  Matrix4dConverter.scala  Matrix4fConverter.scala  Mesh2DConverter.scala  Mesh3DConverter.scala  OptionConverter.scala  Polygon2DConverter.scala  Rings2DConverter.scala  SeqOperations.scala  SeqShift.scala  Vertex2DPointCloudConverter.scala  Vertex3DConverterHelper.scala  Vertex3DHelper.scala
src/main/scala/org/toxicblend/util/: CyclicDoubleLinkedArray.scala  CyclicTree.scala  DoubleLinkedList.scala  EdgeToFaceMap.scala  FileOperations.scala  IntNumberUtils.scala  LinearDoubleLinkedArray.scala  Managed.scala  NumberUtils.scala  Regex.scala  SharedLibraryLoader.scala  SortedLinearDoubleLinkedArray.scala  Time.scala  VertexToFaceMap.scala
src/main/scala/org/toxicblend/vecmath/: AABB2D.scala  CachedPolygon2D.scala  CyclicTree.scala  DoubleLinkedList.scala  EarClipper.scala  EarClippingTriangulator.scala  FiniteLine2D.scala  GdxEarClippingTriangulator.scala  ImmutableVec2D.scala  InfiniteLine2D.scala  Line2D.scala  MutableVec2D.scala  MutableVec2DArray.scala  Polygon2D.scala  SutherlandHodgemanClipper.scala  ToxicLibsEarClipper.scala  Vec2D.scala  Vec2DBase.scala  WeilerAthertonClipper.scala
src/test/scala/org/toxicblend/tests/: AABB2DTest.scala  AwtGeoTest.scala  CyclicTreeTest.scala  DoubleLinkedArrayTest.scala  DoubleLinkedListTest.scala  FiniteLine2DTest.scala  GCodeParserTests1.scala  GCodeTests1.scala  JBulletTest.scala  JBulletTest1.scala  JBulletTest2.scala  JBulletTest3.scala  JBulletTest4.scala  LineIntersectionTest.scala  ParseGCode.scala  Polygon2DTest.scala  Rings3DTest.scala  SimplifyTests.scala  SutherlandHodgemanClipperTest.scala  Test.scala  Test1.scala  Test2.scala  Test3.scala  Test4.scala  ToxicGeoTest.scala  Transform.scala  TrianglePlaneIntersectionTest.scala  Vec2DMatcher.scala  Vec2DTest.scala  VecMathBaseTest.scala  VertexToFaceMapTest.scala  WeilerAthertonTest.scala
(+53 files in other folders)
